[tool.poetry]
name = "gokart_practice"
version = "0.1.0"
description = ""
authors = ["Koki Nishihara <snkg2450@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
gokart = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
